log
Thu 28 Mar 2024 02:13:19 PM UTC: 
 tests:  0|6
total_score: 0/70
8350c47
Thu 28 Mar 2024 02:15:06 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1c06217
Thu 28 Mar 2024 02:16:46 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|5
total_score: 15/70
6f48b8a
Thu 28 Mar 2024 02:22:44 PM UTC: 
 list.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
   59 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
800e4fc
Thu 28 Mar 2024 02:23:08 PM UTC: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1f094ba
Thu 28 Mar 2024 02:23:23 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
b413ae7
Thu 28 Mar 2024 02:30:56 PM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
e9f5777
Thu 28 Mar 2024 02:34:03 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d160345
Thu 28 Mar 2024 02:37:03 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|4
total_score: 25/70
d057b29
Thu 28 Mar 2024 02:38:19 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|4
total_score: 25/70
aae187d
Thu 28 Mar 2024 02:39:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
79f1136
Thu 28 Mar 2024 02:39:59 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
ebd4752
Thu 28 Mar 2024 02:40:33 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
b6b4c05
Thu 28 Mar 2024 02:41:05 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
86d5579
Thu 28 Mar 2024 02:42:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
78404cc
Thu 28 Mar 2024 02:50:16 PM UTC: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:90:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   90 |   if (list->head == NULL)
      |   ^~
list.c:92:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   92 |     list->tail = new;
      |     ^~~~
list.c:94:3: error: ‘else’ without a previous ‘if’
   94 |   else
      |   ^~~~
cc1: all warnings being treated as errors
Compilation failed
cd9a6bd
Thu 28 Mar 2024 02:51:10 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:94:3: error: this ‘else’ clause does not guard... [-Werror=misleading-indentation]
   94 |   else
      |   ^~~~
list.c:96:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
   96 |     list->head->prev = new;
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
9c65c18
Thu 28 Mar 2024 02:51:26 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
fd2aa31
Thu 28 Mar 2024 02:54:39 PM UTC: 
 list.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  10|2
total_score: 45/70
ad822a1
Thu 28 Mar 2024 02:55:40 PM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
7b0ae25
Thu 28 Mar 2024 03:01:19 PM UTC: 
 list.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  10|2
total_score: 45/70
a787f8b
Thu 28 Mar 2024 03:01:50 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
c8f33e6
Thu 28 Mar 2024 03:02:08 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c:128:3: error: expected identifier or ‘(’ before ‘}’ token
  128 |   }
      |   ^
list.c:129:1: error: expected identifier or ‘(’ before ‘}’ token
  129 | }
      | ^
Compilation failed
2094a27
Thu 28 Mar 2024 03:02:15 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
2a69c2e
Thu 28 Mar 2024 04:21:06 PM UTC: 
 list.c | 19 ++++++++++++++-----
 1 file changed, 14 insertions(+), 5 deletions(-)
 tests:  11|1
total_score: 55/70
e101387
Thu 28 Mar 2024 05:42:36 PM UTC: 
 list.c | 42 ++++++++++++++++++++++++++++++------------
 1 file changed, 30 insertions(+), 12 deletions(-)
 tests:  12|0
total_score: 70/70
07104f7
Thu 28 Mar 2024 05:48:39 PM UTC: 
 list.c | 36 ++++++++++++++++--------------------
 1 file changed, 16 insertions(+), 20 deletions(-)
 tests:  12|0
total_score: 70/70
6d19c96
Thu 28 Mar 2024 05:49:50 PM UTC: 
 list.c | 13 ++++---------
 1 file changed, 4 insertions(+), 9 deletions(-)
 tests:  12|0
total_score: 70/70
192d9e2
